starstream-compiler/src/parser/snapshots/starstream_compiler__parser__definition__tests__abi_empty.snap
---
source: starstream-compiler/src/parser/definition.rs
description: "Code:\n\nabi Events {}"
---
Abi(
    AbiDef {
        name: Identifier {
            name: "Events",
            span: Some(
                4..10,
            ),
        },
        parts: [],
    },
)
