starstream-compiler/src/parser/snapshots/starstream_compiler__parser__definition__tests__abi_event_no_params.snap
---
source: starstream-compiler/src/parser/definition.rs
description: "Code:\n\nabi Events {\n    event Ping();\n}\n"
---
Abi(
    AbiDef {
        name: Identifier {
            name: "Events",
            span: Some(
                4..10,
            ),
        },
        parts: [
            Event(
                EventDef {
                    name: Identifier {
                        name: "Ping",
                        span: Some(
                            23..27,
                        ),
                    },
                    params: [],
                },
            ),
        ],
    },
)
