starstream-compiler/src/parser/snapshots/starstream_compiler__parser__definition__tests__abi_single_event.snap
---
source: starstream-compiler/src/parser/definition.rs
description: "Code:\n\nabi Events {\n    event Transfer(from: i64, to: i64);\n}\n"
---
Abi(
    AbiDef {
        name: Identifier {
            name: "Events",
            span: Some(
                4..10,
            ),
        },
        parts: [
            Event(
                EventDef {
                    name: Identifier {
                        name: "Transfer",
                        span: Some(
                            23..31,
                        ),
                    },
                    params: [
                        FunctionParam {
                            name: Identifier {
                                name: "from",
                                span: Some(
                                    32..36,
                                ),
                            },
                            ty: TypeAnnotation {
                                name: Identifier {
                                    name: "i64",
                                    span: Some(
                                        38..41,
                                    ),
                                },
                                generics: [],
                            },
                        },
                        FunctionParam {
                            name: Identifier {
                                name: "to",
                                span: Some(
                                    43..45,
                                ),
                            },
                            ty: TypeAnnotation {
                                name: Identifier {
                                    name: "i64",
                                    span: Some(
                                        47..50,
                                    ),
                                },
                                generics: [],
                            },
                        },
                    ],
                },
            ),
        ],
    },
)
