starstream-compiler/src/parser/snapshots/starstream_compiler__parser__definition__tests__import_named.snap
---
source: starstream-compiler/src/parser/definition.rs
description: "Code:\n\nimport { blockHeight } from starstream:std/cardano;"
---
Import(
    ImportDef {
        items: Named(
            [
                ImportNamedItem {
                    imported: Identifier {
                        name: "blockHeight",
                        span: Some(
                            9..20,
                        ),
                    },
                    local: Identifier {
                        name: "blockHeight",
                        span: Some(
                            9..20,
                        ),
                    },
                },
            ],
        ),
        from: ImportSource {
            namespace: Identifier {
                name: "starstream",
                span: Some(
                    28..38,
                ),
            },
            package: Identifier {
                name: "std",
                span: Some(
                    39..42,
                ),
            },
            interface: Some(
                Identifier {
                    name: "cardano",
                    span: Some(
                        43..50,
                    ),
                },
            ),
        },
    },
)
