starstream-compiler/src/parser/snapshots/starstream_compiler__parser__definition__tests__import_namespace.snap
---
source: starstream-compiler/src/parser/definition.rs
description: "Code:\n\nimport context from starstream:std;"
---
Import(
    ImportDef {
        items: Namespace(
            Identifier {
                name: "context",
                span: Some(
                    7..14,
                ),
            },
        ),
        from: ImportSource {
            namespace: Identifier {
                name: "starstream",
                span: Some(
                    20..30,
                ),
            },
            package: Identifier {
                name: "std",
                span: Some(
                    31..34,
                ),
            },
            interface: None,
        },
    },
)
